# big-data-praktikum

./: .env  .gitignore  README.md  pyproject.toml
code/condaenv/: README.md  environment.yml
code/condaenv/.ipynb_checkpoints/: environment-checkpoint.yml
code/notebooks/: 01_downloadToCluster.ipynb  02_cubePipeline.ipynb  03_S3Upload.ipynb  04_streamingCube.ipynb  AWS_streaming.ipynb  S3Upload.ipynb  WaveletImplementation.ipynb  benchmarkCreateCube.ipynb  cubePipeline.ipynb  downloadTest.ipynb  fftw_wisdom.pkl  fftw_wisdom_float32.pkl  fixingTimeissue.ipynb  openH5s.ipynb  visualizeLexcube.ipynb
code/notebooks/.ipynb_checkpoints/: 02_cubePipeline-checkpoint.ipynb  04_streamingCube-checkpoint.ipynb  downloadTest-checkpoint.ipynb  fixingTimeissue-checkpoint.ipynb  openH5s-checkpoint.ipynb
code/notebooks/tests/: benchmarkCreateCube.ipynb  waveletImplementation.ipynb  waveletMultithreading.ipynb
code/slurm/: 01_download_rhone.py  01_download_rhone.sh  02_fft_pipeline.9303395.txt  02_fft_pipeline.9303513.txt  02_fft_pipeline.9303527.txt  02_fft_pipeline.9303531.txt  02_fft_pipeline.9303621.txt  02_fft_pipeline.9304666.txt  02_fft_pipeline.9306848.txt  02_fft_pipeline.9306856.txt  02_fft_pipeline.9307390.txt  02_fft_pipeline.9307406.txt  02_fft_pipeline.9307418.txt  02_fft_pipeline.9717695.txt  02_fft_pipeline.9717703.txt  02_fft_pipeline.9743607.txt  02_fft_pipeline.9758015.txt  02_fft_pipeline.9805163.txt  02_fft_pipeline.py  02_fft_pipeline.sh  03_s3_upload.9784086.txt  03_s3_upload.py  03_s3_upload.sh  Readme.md  Unzip_Rhone.9266908.txt  download_rhone.py  download_rhone_job.sh  fft_pipeline_old.py  unzip_rhone.py  unzip_rhone.sh
code/slurm/.ipynb_checkpoints/: 01_download_rhone-checkpoint.py  01_download_rhone-checkpoint.sh  02_fft_pipeline-checkpoint.py  02_fft_pipeline-checkpoint.sh  02_fft_pipeline.9743607-checkpoint.txt  03_s3_upload-checkpoint.py  (+3 more)
code/test/: fft_benchmark.py  pyfftw_image.py  pyfftw_simple.py
(+1 files in other folders)
