[tool.poetry]
name = "rhone"
version = "0.1.0"
description = "Creates a new enviornment for all the scripts inside big_data_praktikum"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xarray = "^2024.5.0"
ipykernel = "^6.29.4"
h5netcdf = "^1.3.0"
h5py = "^3.11.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
