[tool.poetry]
name = "rhone"
version = "0.1.0"
description = "Creates a new enviornment for all the scripts inside big-data-praktikum"
authors = ["Jannes Kruse <jannes.kruse@rwth-aachen.de>, Louis Trinkle <louis.trinkle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xarray = "^2024.5.0"
ipykernel = "^6.29.4"
h5netcdf = "^1.3.0"
h5py = "^3.11.0"
scipy = "^1.13.1"
cython = "^3.0.10"
pyfftw = "^0.13.1"
matplotlib = "^3.9.0"
dask = "^2024.6.2"
itables = "^2.1.2"
jupyter-contrib-nbextensions = "^0.7.0"
jupyter = {version = "^1.0.0", extras = ["complete"]}
notebook = "^7.2.1"
nbconvert = "^7.16.4"
zarr = "^2.18.2"
fcwt = "^0.1.18"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
